--- a/template/package.json
+++ b/template/package.json
@@ -24,11 +24,16 @@
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
+    "eslint": "^4.13.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-vue": "^4.0.0-beta.2",
     "file-loader": "^1.1.4",
-    {{#sass}}
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
-    {{/sass}}
+    "stylus": "0.54.5",
+    "stylus-loader": "3.0.1",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
