--- a/template/package.json
+++ b/template/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.0.0-beta.2",
     "file-loader": "^1.1.4",
+    "pug": "^2.0.0-rc.4",
     "stylus": "0.54.5",
     "stylus-loader": "3.0.1",
     "vue-loader": "^13.0.5",
