--- a/template/package.json
+++ b/template/package.json
@@ -27,6 +27,7 @@
     "css-loader": "^0.28.7",
     "eslint": "^4.13.0",
     "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-html": "^4.0.3",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
