--- a/template/package.json
+++ b/template/package.json
@@ -25,7 +25,7 @@
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
-    "eslint": "^5.1.0",
+    "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-html": "^4.0.5",
     "eslint-plugin-import": "^2.13.0",
@@ -34,6 +34,7 @@
     "eslint-plugin-standard": "^3.1.0",
     "eslint-plugin-vue": "^4.7.0",
     "pug": "^2.0.3",
+    "pug-plain-loader": "^1.0.0",
     "stylus": "0.54.5",
     "stylus-loader": "3.0.2",
     "vue-loader": "^15.2.4",
