--- a/template/package.json
+++ b/template/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
     "eslint-plugin-vue": "^4.7.0",
+    "file-loader": "^1.1.11",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "stylus": "0.54.5",
